--- a/index.html
+++ b/index.html
@@ -1697,7 +1697,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2024 NOACH COFFEE BEKASI. All rights reserved. | Crafted with passion</p>
+                <p>&copy; 2024 NOACH COFFEE BEKASI. All rights reserved. | Crafted by bimapanduu</p>
             </div>
         </div>
     </footer>
